<resources>
    <string name="app_name">Producktive</string>
    <string name="task_menu_title">Tareas</string>
    <string name="add_task">Añadir tarea</string>
    <string name="add_task_hint">Escribir nueva tarea</string>
    <string name="task_message_failure">El título de la tarea no puede estar vacío</string>
    <string name="task_message_success">¡Tarea creada exitosamente!</string>
    <string name="no_tasks_message">No hay tareas todavía - añade una para comenzar.</string>
    <string name="delete_task">Eliminar tarea</string>
</resources>